--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8804,75 +8804,218 @@
  .ftco-no-pb {
    padding-bottom: 0 !important; }
  
- .block-7 {
-   border-radius: 4px;
-   margin-bottom: 30px;
-   padding: 30px;
-   background: #fff;
-   -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-   -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-   box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-   -moz-transition: all 0.3s ease;
-   -o-transition: all 0.3s ease;
-   -webkit-transition: all 0.3s ease;
-   -ms-transition: all 0.3s ease;
-   transition: all 0.3s ease; }
-   @media (max-width: 991.98px) {
-     .block-7 {
-       margin-top: 30px; } }
-   .block-7 .heading-2 {
-     font-size: 14px;
-     text-transform: uppercase;
-     letter-spacing: 1px;
-     font-weight: 600; }
-   .block-7 .price {
-     margin: 0;
-     padding: 0;
-     display: block; }
-     .block-7 .price sup {
-       font-size: 24px;
-       top: -1em;
-       color: #b3b3b3; }
-     .block-7 .price .number {
-       font-size: 60px;
-       font-weight: 600;
-       color: #000000; }
-   .block-7 .excerpt {
-     margin-bottom: 10px;
-     color: #1ba12d;
-     font-size: 16px;
-     font-weight: 600;
-     text-transform: uppercase; }
-   .block-7 .label2 {
-     text-transform: uppercase; }
-   .block-7 .pricing-text, .block-7 .pricing-text li {
-     padding: 0;
-     margin: 0; }
-   .block-7 .pricing-text li {
-     list-style: none;
-     margin-bottom: 15px;
-     color: #000000; }
-     .block-7 .pricing-text li span.fa {
-       color: #8fd0d2; }
-   .block-7 .btn-primary {
-     color: #fff;
-     text-transform: uppercase;
-     font-style: 16px;
-     font-weight: 600;
-     letter-spacing: 1px;
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     right: 0;
-     width: 60%;
-     margin: 0 auto; }
-     .block-7 .btn-primary:hover, .block-7 .btn-primary:focus {
-       background: #1ba12d !important;
-       color: #fff; }
-   .block-7:hover, .block-7:focus {
-     -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-     -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-     box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); }
+   .blockprimeiro-7 {
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 30px;
+    background: #fff;
+    min-height: 600px !important;
+    -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    @media (max-width: 991.98px) {
+      .blockprimeiro-7 {
+        margin-top: 30px; } }
+    .blockprimeiro-7 .heading-2 {
+      font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-weight: 600; }
+    .blockprimeiro-7 .price {
+      margin: 0;
+      padding: 0;
+      display: block; }
+      .blockprimeiro-7 .price sup {
+        font-size: 24px;
+        top: -1em;
+        color: #b3b3b3; }
+      .blockprimeiro-7 .price .number {
+        font-size: 60px;
+        font-weight: 600;
+        color: #000000; }
+    .blockprimeiro-7 .excerpt {
+      margin-bottom: 10px;
+      color: #1ba12d;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase; }
+    .blockprimeiro-7 .label2 {
+      text-transform: uppercase; }
+    .blockprimeiro-7 .pricing-text, .blockprimeiro-7 .pricing-text li {
+      padding: 0;
+      margin: 0; }
+    .blockprimeiro-7 .pricing-text li {
+      list-style: none;
+      margin-bottom: 15px;
+      color: #000000; }
+      .blockprimeiro-7 .pricing-text li span.fa {
+        color: #8fd0d2; }
+    .blockprimeiro-7 .btn-primary {
+      color: #fff;
+      text-transform: uppercase;
+      font-style: 16px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      position: relative;
+      top: 60px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 80%;
+      margin: 0 auto; }
+      .blockprimeiro-7 .btn-primary:hover, .blockprimeiro-7 .btn-primary:focus {
+        background: #1ba12d !important;
+        color: #fff; }
+    .blockprimeiro-7:hover, .blockprimeiro-7:focus {
+      -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); 
+     }
+   .blocksegundo-7 {
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 30px;
+    background: #fff;
+    -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    @media (max-width: 991.98px) {
+      .blocksegundo-7 {
+        margin-top: 30px; } }
+    .blocksegundo-7 .heading-2 {
+      font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-weight: 600; }
+    .blocksegundo-7 .price {
+      margin: 0;
+      padding: 0;
+      display: block; }
+      .blocksegundo-7 .price sup {
+        font-size: 24px;
+        top: -1em;
+        color: #b3b3b3; }
+      .blocksegundo-7 .price .number {
+        font-size: 60px;
+        font-weight: 600;
+        color: #000000; }
+    .blocksegundo-7 .excerpt {
+      margin-bottom: 10px;
+      color: #1ba12d;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase; }
+    .blocksegundo-7 .label2 {
+      text-transform: uppercase; }
+    .blocksegundo-7 .pricing-text, .blocksegundo-7 .pricing-text li {
+      padding: 0;
+      margin: 0; }
+    .blocksegundo-7 .pricing-text li {
+      list-style: none;
+      margin-bottom: 15px;
+      color: #000000; }
+      .blocksegundo-7 .pricing-text li span.fa {
+        color: #8fd0d2; }
+    .blocksegundo-7 .btn-primary {
+      color: #fff;
+      text-transform: uppercase;
+      font-style: 16px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 60%;
+      margin: 0 auto; }
+      .blocksegundo-7 .btn-primary:hover, .blocksegundo-7 .btn-primary:focus {
+        background: #1ba12d !important;
+        color: #fff; }
+    .blocksegundo-7:hover, .blocksegundo-7:focus {
+      -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); 
+     }
+   .blockterceiro-7 {
+    border-radius: 4px;
+    margin-bottom: 30px;
+    padding: 30px;
+    background: #fff;
+    -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    @media (max-width: 991.98px) {
+      .blockterceiro-7 {
+        margin-top: 30px; } }
+    .blockterceiro-7 .heading-2 {
+      font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-weight: 600; }
+    .blockterceiro-7 .price {
+      margin: 0;
+      padding: 0;
+      display: block; }
+      .blockterceiro-7 .price sup {
+        font-size: 24px;
+        top: -1em;
+        color: #b3b3b3; }
+      .blockterceiro-7 .price .number {
+        font-size: 60px;
+        font-weight: 600;
+        color: #000000; }
+    .blockterceiro-7 .excerpt {
+      margin-bottom: 10px;
+      color: #1ba12d;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase; }
+    .blockterceiro-7 .label2 {
+      text-transform: uppercase; }
+    .blockterceiro-7 .pricing-text, .blockterceiro-7 .pricing-text li {
+      padding: 0;
+      margin: 0; }
+    .blockterceiro-7 .pricing-text li {
+      list-style: none;
+      margin-bottom: 15px;
+      color: #000000; }
+      .blockterceiro-7 .pricing-text li span.fa {
+        color: #8fd0d2; }
+    .blockterceiro-7 .btn-primary {
+      color: #fff;
+      text-transform: uppercase;
+      font-style: 16px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 60%;
+      margin: 0 auto; }
+      .blockterceiro-7 .btn-primary:hover, .blockterceiro-7 .btn-primary:focus {
+        background: #1ba12d !important;
+        color: #fff; }
+    .blockterceiro-7:hover, .blockterceiro-7:focus {
+      -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
+      box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); 
+     }
  
  .footer {
    padding: 0;
