--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9001,13 +9001,14 @@
       color: #fff;
       text-transform: uppercase;
       font-style: 16px;
+      top: 60px;
       font-weight: 600;
       letter-spacing: 1px;
-      position: absolute;
+      position: relative;
       bottom: 0;
       left: 0;
       right: 0;
-      width: 60%;
+      width: 80%;
       margin: 0 auto; }
       .blockterceiro-7 .btn-primary:hover, .blockterceiro-7 .btn-primary:focus {
         background: #1ba12d !important;
