--- a/css/style.css
+++ b/css/style.css
@@ -8860,9 +8860,8 @@ textarea.form-control {
     font-style: 16px;
     font-weight: 600;
     letter-spacing: 1px;
-    position: relative;
-    min-height: 300px;;
-    bottom: 300px;
+    position: absolute;
+    bottom: 0;
     left: 0;
     right: 0;
     width: 60%;
