--- a/public/css/flaticon.css
+++ b/public/css/flaticon.css
@@ -6,11 +6,11 @@
 
 @font-face {
   font-family: "Flaticon";
-  src: url("{{ asset('fonts/flaticon/font/Flaticon.eot') }}");
-  src: url("{{ asset('fonts/flaticon/font/Flaticon.eot?#iefix) }}") format("embedded-opentype"),
-       url("{{ asset('fonts/flaticon/font/Flaticon.woff) }}") format("woff"),
-       url("{{ asset('fonts/flaticon/font/Flaticon.ttf) }}") format("truetype"),
-       url("{{ asset('fonts/flaticon/font/Flaticon.svg#Flaticon) }}") format("svg");
+  src: url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.eot");
+  src: url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.eot?#iefix") format("embedded-opentype"),
+       url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.woff") format("woff"),
+       url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.ttf") format("truetype"),
+       url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -18,7 +18,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
-    src: url("{{ asset('fonts/flaticon/font/Flaticon.svg#Flaticon') }}") format("svg");
+    src: url("https://www.cartaosaudeprevencao.com.br/fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
   }
 }
 
